# data-flow-engine

./: .gitignore  README.md
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: data_flow_engine.py  upload_dependencies.py
airflow/dags/pipelines/: etl.py
airflow/data/input/events/person/: input-data.json
engine/: docker-compose.yaml  pyproject.toml
engine/resources/metadata/: v1.json
engine/scripts/: build_package.sh
engine/src/data_flow_engine/: engine.py  models.py
engine/src/data_flow_engine/sources/: file.py  kafka.py
engine/src/data_flow_engine/transformations/: common.py  extra_fields.py  validations.py
engine/tests/unit/: conftest.py  test_validations.py
hadoop/: config  docker-compose.yaml
kafka/: docker-compose.yaml
