[project]
name = "data-flow-engine"
version = "0.2.4"
description = ""
authors = [{ name = "Luis Albarracin", email = "lalbarracin92@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.7.0",
    "loguru>=0.7.3",
    "pydantic>=2",
    "pyspark==3.5.4",
]
packages = [{ include = "data_flow_engine", from = "src" }]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "W191", # indentation contains tabs
]


[tool.ruff.lint.isort]
known-third-party = ["data_flow_engine"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-sugar>=1.0.0", "uv>=0.5.13"]
